<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.FavorisFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/searchResultViews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_marginStart="20dp"
                android:fontFamily="@font/urbanist_medium"
                android:textSize="13sp"
                android:layout_marginTop="5dp"
                android:text="Mes artistes &amp; albums"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <View
                android:layout_marginTop="3dp"
                android:background="#E0E0E0"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <TextView
                android:id="@+id/tag1"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/urbanist_extra_bold"
                android:text="@string/artistes"
                android:textSize="28sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchET" />

            <TextView
                android:id="@+id/noArtistsTV"
                android:visibility="gone"
                android:textColor="@color/primary"
                android:textSize="16sp"
                android:fontFamily="@font/urbanist_semibold"
                android:text="@string/no_artists_found_in_likes"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/artistsRV"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tag1" />

            <TextView
                android:id="@+id/tag2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/urbanist_extra_bold"
                android:text="@string/albums"
                android:textSize="28sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/artistsRV" />

            <TextView
                android:id="@+id/noAlbumsTV"
                android:visibility="gone"
                android:textColor="@color/primary"
                android:textSize="16sp"
                android:fontFamily="@font/urbanist_semibold"
                android:text="@string/no_albums_found_in_likes"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/albumsRV"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp" />

        </LinearLayout>

    </ScrollView>

</layout>